# Caleon_Thinker

./: .gitignore  README.md  SESSION_NOTES.md  folder.txt  pyproject.toml  tree.txt
app/: main.py
app/articulation/: articulation_engine.py  articulation_vault.py  llm_bridge.py  output_guard.py  response_templates.py  style_router.py
app/config/: constants.py  feature_flags.py  settings.py
app/core/: context_packet.py  decision_packet.py  enums.py  exceptions.py  orchestrator.py
app/divergence_rkg/: divergence_rkg.py  test_divergence_rkg.py
app/egf/: claim_node.py  coherence_tensor.py  contradiction_drag.py  convergence_engine.py  evidence_mass.py  gravity_field.py  hypothesis_pool.py  uncertainty_radius.py
app/harmonizer/: articulation_alignment.py  conflict_resolver.py  harmonizer.py  signal_reconciler.py
app/memory/: a_posteriori_vault.py  a_priori_vault.py  cache.py  cache_invalidator.py  cache_keys.py  memory_matrix.py  prior_decision_index.py  project_caleon.md  reflection_vault.py  retrieval_router.py
app/reasoners/: base.py  registry.py
app/recursion/: drift_recheck.py  outcome_reflection.py  recursive_review.py  self_check.py
app/resilience/: byzantine_consensus.py  ping_drift_protection.py  quorum.py  redundancy_manager.py  signed_verdicts.py
app/schemas/: claims.py  evidence.py  memory.py  telemetry.py  verdicts.py
app/scoring/: accuracy_score.py  coherence_score.py  fragility_penalty.py  softmax_engine.py  truthfulness_score.py  uncertainty_penalty.py
app/security/: chacha_wrapper.py  governance_capsule.py  key_provider.py  (+2 more)
(+55 files in other folders)
