[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "caleon-thinker"
version = "0.1.0"
description = "Caleon Ethical Cognition Scaffolding — Epistemological Gravity Field cognitive engine"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.0",
    "scikit-learn>=1.3",
    "numpy>=1.24",
]

[project.optional-dependencies]
llm = ["anthropic>=0.30"]
crypto = ["cryptography>=42"]
dev = ["pytest>=8", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["app/tests", "app/divergence_rkg"]
python_files = ["test_*.py"]
